@@ -28,6 +28,7 @@
  * @summary SIGSEGV in PhaseIdealLoop::get_early_ctrl()
  * @compile --enable-preview -source ${jdk.version} TestScopedValueBadDominatorAfterExpansion.java
  * @run main/othervm --enable-preview -XX:-BackgroundCompilation -XX:-TieredCompilation -XX:+UseParallelGC TestScopedValueBadDominatorAfterExpansion
+ * @run main/othervm --enable-preview -XX:-BackgroundCompilation -XX:-TieredCompilation TestScopedValueBadDominatorAfterExpansion
  */
 
 public class TestScopedValueBadDominatorAfterExpansion {
@@ -37,13 +38,22 @@ public class TestScopedValueBadDominatorAfterExpansion {
     private static Object field2;
 
     public static void main(String[] args) {
-        Object o = new Object();
+        Object o1 = new Object();
+        Object o2 = new Object();
         for (int i = 0; i < 20_000; i++) {
-            ScopedValue.where(sv1, o).where(sv2, o).run(
+            field1 = null;
+            field2 = null;
+            ScopedValue.where(sv1, o1).where(sv2, o2).run(
                     () -> {
                         test();
                     }
             );
+            if (field1 != o1) {
+                throw new RuntimeException("field1 assigned wrong value");
+            }
+            if (field2 != o2) {
+                throw new RuntimeException("field2 assigned wrong value");
+            }
         }
     }
 
